--- a/src/ActionButton.css
+++ b/src/ActionButton.css
@@ -7,11 +7,11 @@ button {
     position: relative;
     width: 150px;
     padding: 0;
-    font-size: 15px;
-    margin: 10px 20px 10px 0;
-    font-weight: 650;
+    font-size: 16px;
+    margin: 10px 20px 5px 0;
+    font-weight: 700;
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
     color: #FFF;
     border-radius: 5px;
     transition: all 0.2s ;
@@ -22,7 +22,7 @@ button {
 }
 
 .btnLightBlue {
-  background: #5DC8CD;
+  background: rgb(0, 163, 204);
 }
 
 .btnOrange {
@@ -43,11 +43,11 @@ button {
 }
 
 .btnLightBlue.btnBorder {
-  box-shadow: 0px 0px 0px 0px #01939A;
+  box-shadow: 0px 0px 0px 0px rgb(1, 93, 154);
 }
 
 .btnLightBlue.btnBorder:hover {
-  box-shadow: 0px 0px 0px 3px #01939A;
+  box-shadow: 0px 0px 0px 3px rgb(1, 106, 154);
 }
 
 .btnOrange.btnBorder {
