--- a/src/Panel.css
+++ b/src/Panel.css
@@ -1,6 +1,9 @@
 .Panel {
-    width: 40%;
-    height: 40%;
+    width: 50%;
+    height: 60%;
+    text-align: center;
+    float: left;
+    padding: 40px 0px 40px 0px;
 }
 
 #blue {
