--- a/src/ActionButton.css
+++ b/src/ActionButton.css
@@ -1,15 +1,15 @@
-@import url(https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700);
+@import url('https://fonts.googleapis.com/css?family=Orbitron:400,500,700');
 
 button {
-    font-family: 'Josefin Slab', serif;
+    font-family: 'Orbitron', 'Open Sans', serif;
     text-decoration: none;
     border: none;
     position: relative;
     width: 150px;
     padding: 0;
-    font-size: 16px;
-    margin: 10px 20px 5px 0;
-    font-weight: 700;
+    font-size: 14px;
+    margin: 10px 0 10px 0;
+    font-weight: 500;
     text-align: center;
     line-height: 40px;
     color: #FFF;
@@ -22,7 +22,7 @@ button {
 }
 
 .btnLightBlue {
-  background: rgb(0, 163, 204);
+  background: rgba(0, 163, 204, .6);
 }
 
 .btnOrange {
@@ -47,7 +47,7 @@ button {
 }
 
 .btnLightBlue.btnBorder:hover {
-  box-shadow: 0px 0px 0px 3px rgb(1, 106, 154);
+  background-color: rgb(38, 185, 253);
 }
 
 .btnOrange.btnBorder {
