--- a/src/Panel.css
+++ b/src/Panel.css
@@ -1,19 +1,8 @@
 .Panel {
-    width: 50%;
-    height: 60%;
     text-align: center;
-    float: left;
-    padding: 40px 0px 40px 0px;
-}
-
-#blue {
-    background-color: rgb(0, 132, 255);
-}
-
-#red {
-    background-color: rgb(255, 83, 41);
-}
-
-#yellow {
-    background-color: rgb(255, 196, 0);
+    display: inline-block;
+    padding: 40px;
+    margin: 10px;
+    background-color: rgb(33, 45, 56);
+    border: 2px solid rgb(204, 204, 204);
 }
