--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
-  background: hsla(250, 8%, 14%,1);
+  background: rgb(0, 0, 0);
   margin: 0;
   padding: 0;
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
