--- a/src/Panel.css
+++ b/src/Panel.css
@@ -1,8 +1,17 @@
 .Panel {
     text-align: center;
     display: inline-block;
-    padding: 40px;
+    padding: 30px;
     margin: 10px;
     background-color: rgb(33, 45, 56);
     border: 2px solid rgb(204, 204, 204);
+}
+
+.line {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 2px solid rgb(204, 204, 204);
+    margin: 1em 0;
+    padding: 0;
 }
