--- a/src/TextFeed.css
+++ b/src/TextFeed.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron:400,500,700');
+
 .TextFeed {
     white-space: pre-line;
+    font-family: 'Orbitron', 'Open Sans', serif;
+    font-size: 12px;
+    color: #FFF;
+    text-align: left;
+    font-weight: 400;
 }
