--- a/src/ActionButton.css
+++ b/src/ActionButton.css
@@ -15,8 +15,15 @@ button {
     color: #FFF;
     border-radius: 0px;
     transition: all 0.4s;
+    display: inline-block;
+    height: 45px;
+    width: 155px;
 }
 
+.disabled {
+  background: rgba(0, 163, 204, 0.1);
+  border: 1px solid black;
+}
 .btnBlueGreen {
   background: #00AE68;
 }
@@ -33,35 +40,6 @@ button {
   background: #A74982;
 }
 
-/* BORDER */
-.btnBlueGreen.btnBorder {
-  box-shadow: 0px 0px 0px 0px #21825B;
-}
-
-.btnBlueGreen.btnBorder:hover {
-  box-shadow: 0px 0px 0px 5px #21825B;
-}
-
-.btnLightBlue.btnBorder {
-  box-shadow: 0px 0px 0px 0px rgb(1, 93, 154);
-}
-
-.btnLightBlue.btnBorder:hover {
+.btnLightBlue:hover {
   background-color: rgb(38, 185, 253);
-}
-
-.btnOrange.btnBorder {
-  box-shadow: 0px 0px 0px 0px #A66615;
-}
-
-.btnOrange.btnBorder:hover {
-  box-shadow: 0px 0px 0px 5px #A66615;
-}
-
-.btnPurple.btnBorder {
-  box-shadow: 0px 0px 0px 0px #6D184B;
-}
-
-.btnPurple.btnBorder:hover {
-  box-shadow: 0px 0px 0px 5px #6D184B;
 }
