--- a/src/Panel.css
+++ b/src/Panel.css
@@ -3,11 +3,13 @@
     display: inline-block;
     padding: 30px;
     margin: 10px;
+    vertical-align: top;
     background-color: rgb(33, 45, 56);
     border: 2px solid rgb(204, 204, 204);
+    height: 490px;
 }
 
-.line {
+.h-line {
     display: block;
     height: 1px;
     border: 0;
