--- a/src/TextFeed.css
+++ b/src/TextFeed.css
@@ -5,6 +5,12 @@
     font-family: 'Orbitron', 'Open Sans', serif;
     font-size: 12px;
     color: #FFF;
-    text-align: left;
     font-weight: 400;
+    width: 425px;
+    height: 385px;
+    background: rgba(0, 163, 204, 0.1);
+    padding: 15px 40px 15px 40px;
+    text-align: left;
+    display: flex;
+    align-items: flex-end;
 }
