--- a/src/Panel.css
+++ b/src/Panel.css
@@ -1,12 +1,12 @@
 .Panel {
     text-align: center;
     display: inline-block;
-    padding: 30px;
+    padding: 15px 30px 35px 30px;
     margin: 10px;
     vertical-align: top;
     background-color: rgb(33, 45, 56);
     border: 2px solid rgb(204, 204, 204);
-    height: 490px;
+    overflow: hidden;
 }
 
 .h-line {
@@ -17,3 +17,4 @@
     margin: 1em 0;
     padding: 0;
 }
+
