--- a/src/css/TextFeed.css
+++ b/src/css/TextFeed.css
@@ -6,11 +6,17 @@
     font-size: 12px;
     color: #FFF;
     font-weight: 400;
-    width: 450px;
-    height: 391px;
     background: rgba(0, 163, 204, 0.1);
-    padding: 15px 20px 5px 20px;
     text-align: left;
     display: table-cell;
     vertical-align: bottom;
+    width: 450px;
+    height: 391px;
+    padding: 15px 20px 5px 20px;
+}
+
+.feedWrapper {
+    width: 450px;
+    height: 410px;
+    padding: 0;
 }
