--- a/src/appStyles.css
+++ b/src/appStyles.css
@@ -46,13 +46,22 @@ html, body {
     font-size: 14px;
     text-align: left;
     background: rgba(0, 163, 204, .4);
+    backdrop-filter: blur(5px);
     font-family: "Courier New", Courier, monospace;
+    overflow: hidden;
+}
+#notifications {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding-left: 10px;
+    padding-right: 35px;
 }
 
 .notification {
     background-color: rgb(33, 45, 56);
     border: 1px solid rgb(204, 204, 204);
-    padding: 5px;
+    padding: 8px;
     margin: 10px 5px 10px 5px;
 }
 
