--- a/src/appStyles.css
+++ b/src/appStyles.css
@@ -50,6 +50,7 @@ html, body {
     font-family: "Courier New", Courier, monospace;
     overflow: hidden;
 }
+
 #notifications {
     width: 100%;
     height: 100%;
@@ -70,7 +71,16 @@ html, body {
     max-width: 20%;
     height: 65%;
 }
-  
+
+#fadePanel {
+    margin: 0 auto;
+    margin-top: 1px;
+    height: 99%;
+    width: 99%;
+    border: 2px solid rgba(255, 255, 255, .4);
+    background-color: rgba(255, 255, 255, .2);
+}
+
 #actionBar {
     margin: 3px; 
     max-width: 20%;
