--- a/src/appStyles.css
+++ b/src/appStyles.css
@@ -32,7 +32,15 @@ html, body {
     border: 2px solid rgb(204, 204, 204);
     color: white;
 }
-  
+
+#titleMenu {
+    margin: 0 auto;
+    margin-top: 100px;
+    min-height: 60%;
+    max-width: 30%;
+    text-align: center;
+}
+
 #navigation {
     margin: 3px;
     height: 15%;
