--- a/src/appStyles.css
+++ b/src/appStyles.css
@@ -3,7 +3,7 @@ html, body {
     height: 92%;
     text-align: center;
     margin: 0 auto;
-    background-color: black;
+    background-color: rgb(31, 30, 30);
 }
 
 #root, #components {
@@ -36,9 +36,45 @@ html, body {
 #titleMenu {
     margin: 0 auto;
     margin-top: 100px;
-    min-height: 60%;
-    max-width: 30%;
+    height: 90%;
+    width: 100%;
     text-align: center;
+    background-color: rgba(33, 45, 56, 0);
+    border: 2px solid rgba(204, 204, 204, 0);
+}
+
+#titlePanel {
+    margin: 0 auto;
+    height: 65%;
+    width: 45%;
+    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 0.8em rgba(255,255,255,0.3);
+    border: #fff solid 2px;
+    background:  rgba(63, 63, 63, 0.1);
+}
+#titlePanel > img {
+    margin-top: 100px;
+    height: 168px;
+    width: 300px;
+}
+
+#actionPanel {
+    margin-top: 10px;
+    height: 42.5%;
+}
+
+#actionPanel > button {
+    margin: 25px 10px 10px 10px;
+    height: 55px;
+    width: 205px;
+    background: rgba(0, 95, 204, 0.1);
+    box-shadow: inset 0 0 1em rgba(0, 122, 170, 0.5), 0 0 1em rgba(0, 122, 170, 0.5);
+    border: rgb(0, 158, 221) solid 2px;
+    cursor: pointer;
+}
+
+#actionPanel > button:hover {
+    background-color: rgb(0, 158, 221);
+    box-shadow: inset 0 0 0 rgba(0,122,170,0.5), 0 0 1.5em rgba(0,122,170,0.7);
 }
 
 #navigation {
