Rename CharacterCreationButton and CharacterCreationInput to AttributeSelect and NameSelect

--- a/src/css/CharacterCreation.css
+++ b/src/css/CharacterCreation.css
@@ -76,7 +76,7 @@
     margin: 50px 0 150px 0;
 }
 /*
- * PLAYER CLASSES
+ * PLAYER CLASS
  */
 #playerClass 
 {
@@ -93,7 +93,7 @@
     margin: 25px 10px 10px 10px;
 }
 /*
- * PLAYER PROFICIENCIES
+ * PLAYER PROFICIENCY
  */
 #playerProficiency
 {
