--- a/src/css/CharacterCreation.css
+++ b/src/css/CharacterCreation.css
@@ -12,11 +12,11 @@
     letter-spacing: 0.30em;
     background-color: rgba(0, 0, 0, 0);
 }
-#characterCreation > * 
+#playerName, #playerClass, #playerProficiency
 {
     height: 500px;
     width: 300px;
-    margin: 50px;
+    margin: 110px 50px 50px 50px;
     display: inline-block; 
     vertical-align: top;
     color: white;
@@ -28,7 +28,7 @@
     animation-fill-mode:forwards; -webkit-animation-fill-mode:forwards; -moz-animation-fill-mode:forwards;
     animation-duration:1s; -webkit-animation-duration:1s; -moz-animation-duration:1s;
 }
-#characterCreation > *:hover 
+#playerName:hover, #playerClass:hover, #playerProficiency:hover 
 {
     color: rgba(0,0,0,0.8);
     background-color: #fff;
@@ -108,4 +108,55 @@
     height: 45px;
     width: 205px;
     margin: 10px 10px 5px 10px;
+}
+/*
+ * START GAME
+ */
+#startGame 
+{
+    margin: 0 auto;
+    margin-top: -10px;
+    padding: 0;
+    clear: both;
+    display: block;
+    text-align: center;
+}
+#startGame > button
+{
+    margin: 0;
+}
+.notVisible 
+{
+    opacity: 0;
+    color: rgba(0,0,0,0.8);
+    background-color: black;
+    box-shadow: none;
+    transition: 0.0s;
+
+}
+.notVisible:hover 
+{
+    background-color: black;
+    transition: 0.0s;
+}
+.visible 
+{
+    height: 55px;
+    width: 190px;
+    opacity: 0;
+    color: rgba(0,0,0,0.8);
+    background-color: #fff;
+    box-shadow: inset 0 0 0 rgba(255,255,255,0.3), 0 0 1.2em rgba(255,255,255,0.5);
+    transition: .2s;
+    cursor: pointer;
+    animation-delay: 1s; -webkit-animation-delay: 1s; -moz-animation-delay: 1s;
+    animation:fadeIn ease-in 1; -webkit-animation:fadeIn ease-in 1; -moz-animation:fadeIn ease-in 1;
+    animation-fill-mode:forwards; -webkit-animation-fill-mode:forwards; -moz-animation-fill-mode:forwards;
+    animation-duration:1s; -webkit-animation-duration:1s; -moz-animation-duration:1s;
+}
+.visible:hover 
+{
+    height: 65px;
+    width: 205px;
+    transition: .2s;
 }
