--- a/src/css/ActionButton.css
+++ b/src/css/ActionButton.css
@@ -2,44 +2,25 @@
 
 button {
     font-family: 'Orbitron', 'Open Sans', serif;
-    text-decoration: none;
-    border: none;
-    position: relative;
-    width: 150px;
-    padding: 0;
     font-size: 14px;
-    margin: 10px 0 10px 0;
     font-weight: 500;
-    text-align: center;
-    line-height: 40px;
     color: #FFF;
-    border-radius: 0px;
     transition: all 0.3s;
-    display: inline-block;
     height: 45px;
     width: 155px;
-}
-
-.disabled {
-  background: rgba(0, 163, 204, 0.1);
-  border: 1px solid black;
-}
-.btnBlueGreen {
-  background: #00AE68;
+    cursor: pointer;
+    display: inline-block;
 }
 
 .btnLightBlue {
-  background: rgba(0, 163, 204, .6);
-}
-
-.btnOrange {
-  background: #FFAA40;
-}
-
-.btnPurple {
-  background: #A74982;
+  background-color:  rgba(63, 63, 63, 0.1);
+  box-shadow: inset 0 0 1em rgba(255, 255, 255, 0.5), 0 0 1em rgba(255, 255, 255, 0.5);
+  border: rgb(255, 255, 255) solid 2px;
 }
 
 .btnLightBlue:hover {
-  background-color: rgb(38, 185, 253);
+  color: rgba(0,0,0,0.8);
+  background-color: #fff;
+  box-shadow: inset 0 0 0 rgba(255,255,255,0.3), 0 0 1.2em rgba(255,255,255,0.5);
+  transition: 1.0s;
 }
