--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -1,7 +1,29 @@
 #navigation 
 {
     margin: 3px;
-    margin-top: 10vh;
+    margin-top: 15vh;
     height: 15%;
     width: 100%;
+}
+
+#navButton
+{
+    width: 15vw;
+    height: 1vh;
+    margin: 1vw;
+    color: white;
+    background-color: white;
+    border: #fff solid 1px;
+    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 0.8em rgba(255,255,255,0.3);
+    overflow: hidden;
+}
+#navButton:hover
+{
+    width: 15vw;
+    height: 5vh;
+    margin: -10vh 2vw -10vh 2vw;
+    color: black;
+    background-color: white;
+    border: #fff solid 1px;
+    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 1.8em rgba(255,255,255,0.3);
 }
