--- a/src/css/ActionBar.css
+++ b/src/css/ActionBar.css
@@ -1,27 +1,33 @@
-#navigation 
+#actionBar 
 {
-    margin: 3px;
-    margin-top: 15vh;
-    height: 15%;
-    width: 100%;
+    margin: 0 auto;
+    margin-top: 2vh;
+    height: 25vh;
+    width: 100vw;
+    text-align: center;
 }
-
-#navButton
+#actions 
 {
-    width: 15vw;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+#actions > * > button 
+{
     height: 2vh;
-    margin: 1vw;
+    width: 50vw;
+    margin: 2vh 0 3vh 0;
     color: white;
     background-color: white;
     border: #fff solid 1px;
     box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 0.8em rgba(255,255,255,0.3);
     overflow: hidden;
 }
-#navButton:hover
+#actions > * > button:hover
 {
-    width: 15vw;
-    height: 5vh;
-    margin: -10vh 2vw -10vh 2vw;
+    width: 50vw;
+    height: 6vh;
+    margin: 0vh 0vw 1vh 0vw;
     color: black;
     background-color: white;
     border: #fff solid 1px;
