--- a/src/appStyles.css
+++ b/src/appStyles.css
@@ -5,47 +5,9 @@ html, body, #root
     min-height: 100vh;
     margin: 0 auto;
     text-align: center;
-    background-color: rgb(31, 30, 30);
-    overflow: hidden;
-}
-#titleMenu
-{
-    height: 40vh;
-    width: 150vw;
-    margin: 0 auto;
-    margin-top: 30vh;
-    margin-left: -25vw;
-    margin-right: -25vw;
-    background-color:  rgba(63, 63, 63, 0.1);
-    box-shadow: inset 0 0 2em rgba(255, 255, 255, 0.3), 0 0 0.8em rgba(255,255,255,0.3);
-    border: #fff solid 2px;
-}
-img 
-{
-    margin-top: 9vh;
-    margin-bottom: 10vh;
-    height: 23vh;
-    width: 20vw;
-}
-#actionPanel 
-{
-    margin-top: 1vh;
-}
-#actionPanel > button 
-{
-    height: 7vh;
-    width: 13vw;
-    margin: 5vh 1vw 1vw 0;
-    background-color:  rgba(63, 63, 63, 0.1);
-    box-shadow: inset 0 0 1em rgba(255, 255, 255, 0.5), 0 0 1em rgba(255, 255, 255, 0.5);
-    border: rgb(255, 255, 255) solid 2px;
-    cursor: pointer;
-}
-#actionPanel > button:hover 
-{
-    color: black;
     background-color: rgb(255, 255, 255);
-    box-shadow: inset 0 0 1em rgba(255, 255, 255, 0.5), 0 0 1em rgba(255, 255, 255, 0.5);
+    overflow: hidden;
+    box-shadow: inset 0 0 3.8em rgba(255,255,255,0.3), 0 0 3.8em rgba(255,255,255,0.3);
 }
 /*
  * CHARACTER STATUS
