--- a/src/css/ActionBar.css
+++ b/src/css/ActionBar.css
@@ -14,20 +14,20 @@
 }
 #actions > * > button 
 {
-    height: 2vh;
-    width: 50vw;
-    margin: 2vh 0 3vh 0;
-    color: white;
-    background-color: white;
-    border: #fff solid 1px;
-    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 0.8em rgba(255,255,255,0.3);
+    height: 5vh;
+    width: 45vw;
+    margin: 1vh 0 1vh 0;
+    color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.014);
+    border: rgba(255, 255, 255, 0.253) solid 1px;
+    box-shadow: inset 0 0 0.8em rgba(255, 255, 255, 0.144), 0 0 0.0em rgba(255,255,255,0.3);
     overflow: hidden;
 }
 #actions > * > button:hover
 {
-    width: 50vw;
-    height: 6vh;
-    margin: 0vh 0vw 1vh 0vw;
+    width: 45vw;
+    height: 5vh;
+    margin: 1vh 0vw 1vh 0vw;
     color: black;
     background-color: white;
     border: #fff solid 1px;
