--- a/src/css/ActionBar.css
+++ b/src/css/ActionBar.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     margin-top: 2vh;
     height: 25vh;
-    width: 100vw;
+    width: 56vw;
     text-align: center;
 }
 #actions 
@@ -11,25 +11,25 @@
     width: 100%;
     height: 100%;
     text-align: center;
+    margin: 0 auto;
+    padding-left: 13vw;
 }
 #actions > * > button 
 {
-    height: 5vh;
-    width: 45vw;
-    margin: 1vh 0 1vh 0;
-    color: rgb(255, 255, 255);
-    background-color: rgba(255, 255, 255, 0.014);
-    border: rgba(255, 255, 255, 0.253) solid 1px;
-    box-shadow: inset 0 0 0.8em rgba(255, 255, 255, 0.144), 0 0 0.0em rgba(255,255,255,0.3);
+    height: 6vh;
+    width: 3vw;
+    margin: 1vh 6vw 1vh 0vw;
+    color: rgb(31, 30, 30);
+    background-color: rgb(31, 30, 30);
+    border: rgb(31, 30, 30) solid 2px;
     overflow: hidden;
+    float: left;
+    transition: 0.5s;
 }
 #actions > * > button:hover
 {
-    width: 45vw;
-    height: 5vh;
-    margin: 1vh 0vw 1vh 0vw;
     color: black;
-    background-color: white;
-    border: #fff solid 1px;
-    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 1.8em rgba(255,255,255,0.3);
+    background-color: rgb(31, 30, 30);
+    box-shadow: inset 0 0 0 rgba(31,30,30,0.5), 0 0 1.5em rgba(31,30,30,0.7);
+    transition: 0.5s;
 }
