--- a/src/css/ActivityFeed.css
+++ b/src/css/ActivityFeed.css
@@ -4,10 +4,11 @@
     width: 45vw;
     margin: 0 auto;
     padding: 2vw;
-    color: white;
+    color: rgb(31, 30, 30);
     text-align: center;
     font-style: italic;
     font-family: Monospace, 'Open Sans', serif;
+    font-weight: 600;
     overflow: hidden;
 }
 #message
