--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -11,19 +11,19 @@
     width: 15vw;
     height: 2vh;
     margin: 1vw;
-    color: white;
-    background-color: white;
-    border: #fff solid 1px;
-    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 0.8em rgba(255,255,255,0.3);
+    color: rgb(31, 30, 30);
+    background-color: rgb(31, 30, 30);
+    border: rgb(31, 30, 30) solid 1px;
     overflow: hidden;
+    letter-spacing: 0.30em;
+    transition: 0.3s;
 }
 #navButton:hover
 {
     width: 15vw;
     height: 5vh;
     margin: -10vh 2vw -10vh 2vw;
-    color: black;
-    background-color: white;
-    border: #fff solid 1px;
-    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 1.8em rgba(255,255,255,0.3);
+    color: white;
+    box-shadow: inset 0 0 0 rgba(31,30,30,0.5), 0 0 1.5em rgba(31,30,30,0.7);
+    transition: 0.3s;
 }
