--- a/src/css/TitleMenu.css
+++ b/src/css/TitleMenu.css
@@ -38,10 +38,12 @@ img
     box-shadow: inset 0 0 1em rgba(255, 255, 255, 0.5), 0 0 1em rgba(255, 255, 255, 0.5);
     border: rgb(255, 255, 255) solid 2px;
     cursor: pointer;
+    transition: 0.3s;
 }
 #actionPanel > button:hover 
 {
     color: black;
     background-color: rgb(255, 255, 255);
     box-shadow: inset 0 0 1em rgba(255, 255, 255, 0.5), 0 0 1em rgba(255, 255, 255, 0.5);
+    transition: 0.3s;
 }
