--- a/src/css/ActionBar.css
+++ b/src/css/ActionBar.css
@@ -33,3 +33,22 @@
     box-shadow: inset 0 0 0 rgba(31,30,30,0.5), 0 0 1.5em rgba(31,30,30,0.7);
     transition: 0.5s;
 }
+@keyframes moving {
+    from { transform: translateY(2vh); }
+    to { transform: translateY(0vh); }
+}
+#actionMessage
+{
+    height: 4vh;
+    width: 50vw;
+    margin: 0 auto;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    font-size: 20px;
+    clear: both;
+}
+.move
+{
+    -webkit-animation: moving 0.8s 1;
+    animation: moving 0.8s 1;
+}
