--- a/src/css/CharacterSheet.css
+++ b/src/css/CharacterSheet.css
@@ -1,17 +1,51 @@
 #characterStatus 
 {
-    height: 40vh;
-    width: 10vw;
-    margin: 0.5vw;
-    float: left;
+    height: 65vh;
+    width: 85vw;
+    margin: 0 auto;
+    letter-spacing: 0.07em;
+    font-size: 15px;
+
 }
-#fadePanel 
+#statusPanel, #attributePanel, #skillPanel
 {
     margin: 0 auto;
-    margin-top: 1px;
-    height: 99%;
-    width: 99%;
-    background-color:  rgba(63, 63, 63, 0.1);
-    box-shadow: inset 0 0 1em rgba(255, 255, 255, 0.5), 0 0 1em rgba(255, 255, 255, 0.5);
-    border: rgb(255, 255, 255) solid 2px;
+    height: 65vh;
+    width: 15vw;
+    margin: 1vw;
+    background-color: rgb(31, 30, 30);
+    color: rgb(255, 255, 255);
+    display: inline-block;
+    overflow: hidden;
+    transition: all 1s;
+    opacity:0;
+    animation:fadeIn ease-in 1; -webkit-animation:fadeIn ease-in 1; -moz-animation:fadeIn ease-in 1;
+    animation-fill-mode:forwards; -webkit-animation-fill-mode:forwards; -moz-animation-fill-mode:forwards;
+    animation-duration:1s; -webkit-animation-duration:1s; -moz-animation-duration:1s;
+}
+#statusPanel:hover, #attributePanel:hover, #skillPanel:hover 
+{
+    box-shadow: inset 0 0 1.5em rgba(31,30,30,0.5), 0 0 1.5em rgba(31,30,30,0.7);
+    transition: 1.0s;
+}
+#statusPanel
+{
+    animation-delay: 0.5s; -webkit-animation-delay: 0.5s; -moz-animation-delay: 0.5s;
+}
+#attributePanel
+{
+    animation-delay: 1s; -webkit-animation-delay: 1s; -moz-animation-delay: 1s;
+}
+#skillPanel
+{
+    animation-delay: 1.4s; -webkit-animation-delay: 1.4s; -moz-animation-delay: 1.4s;
+}
+#characterStatus > * > table
+{
+    margin: 0 auto;
+}
+#characterStatus > * > * > * > td
+{
+    text-align: left;
+    padding: 1vh;
 }
