--- a/src/css/ActionBar.css
+++ b/src/css/ActionBar.css
@@ -19,8 +19,8 @@
     height: 6vh;
     width: 3vw;
     margin: 1vh 6vw 1vh 0vw;
-    color: rgb(31, 30, 30);
-    background-color: rgb(31, 30, 30);
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     border: rgb(31, 30, 30) solid 2px;
     overflow: hidden;
     float: left;
@@ -29,8 +29,7 @@
 #actions > * > button:hover
 {
     color: black;
-    background-color: rgb(31, 30, 30);
-    box-shadow: inset 0 0 0 rgba(31,30,30,0.5), 0 0 1.5em rgba(31,30,30,0.7);
+    box-shadow: inset 0 0 1.8em rgba(255,255,255,0.3), 0 0 1.8em rgba(255,255,255,0.3);
     transition: 0.5s;
 }
 @keyframes moving {
@@ -42,6 +41,7 @@
     height: 4vh;
     width: 50vw;
     margin: 0 auto;
+    color: rgb(255, 255, 255);
     margin-top: 3vh;
     margin-bottom: 3vh;
     font-size: 20px;
