--- a/src/css/ActivityFeed.css
+++ b/src/css/ActivityFeed.css
@@ -1,10 +1,18 @@
+#gameSpace
+{
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(31, 30, 30);
+    box-shadow: inset 0 0 3.8em rgba(255,255,255,0.3), 0 0 3.8em rgba(255,255,255,0.3);
+    overflow: hidden;
+}
 #activityFeed 
 {
     height: 40vh;
     width: 45vw;
     margin: 0 auto;
     padding: 2vw;
-    color: rgb(31, 30, 30);
+    color: rgb(255, 255, 255);
     text-align: center;
     font-style: italic;
     font-family: Monospace, 'Open Sans', serif;
