--- a/src/css/CharacterSheet.css
+++ b/src/css/CharacterSheet.css
@@ -13,8 +13,9 @@
     height: 65vh;
     width: 15vw;
     margin: 1vw;
-    background-color: rgb(31, 30, 30);
     color: rgb(255, 255, 255);
+    border: rgb(255, 255, 255) solid 2px;
+    box-shadow: inset 0 0 0.8em rgba(255,255,255,0.3), 0 0 0.8em rgba(255,255,255,0.3);
     display: inline-block;
     overflow: hidden;
     transition: all 1s;
@@ -25,7 +26,8 @@
 }
 #statusPanel:hover, #attributePanel:hover, #skillPanel:hover 
 {
-    box-shadow: inset 0 0 1.5em rgba(31,30,30,0.5), 0 0 1.5em rgba(31,30,30,0.7);
+    color: rgb(31, 30, 30);
+    background-color: rgb(255, 255, 255);
     transition: 1.0s;
 }
 #statusPanel
