--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -1,18 +1,18 @@
 #navigation 
 {
-    margin-top: 15vh;
-    height: 15%;
-    width: 100%;
+    height: 25vh;
+    width: 100vw;
 }
 
 #navButton
 {
-    width: 15vw;
+    width: 15.2vw;
     height: 2vh;
     margin: 1vw;
-    color: rgb(31, 30, 30);
-    background-color: rgb(31, 30, 30);
-    border: rgb(31, 30, 30) solid 1px;
+    margin-top: 20vh;
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    border: rgb(255, 255, 255) solid 2px;
     overflow: hidden;
     letter-spacing: 0.30em;
     transition: 0.3s;
@@ -22,7 +22,7 @@
     width: 15vw;
     height: 5vh;
     margin: -10vh 2vw -10vh 2vw;
-    color: white;
+    color: rgb(31, 30, 30);
     box-shadow: inset 0 0 0 rgba(31,30,30,0.5), 0 0 1.5em rgba(31,30,30,0.7);
     transition: 0.3s;
 }
