--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -10,6 +10,7 @@
     height: 2vh;
     margin: 1vw;
     margin-top: 20vh;
+    font-size: 1.8vh;
     color: rgb(255, 255, 255);
     background-color: rgb(255, 255, 255);
     border: rgb(255, 255, 255) solid 2px;
