--- a/src/css/ActionBar.css
+++ b/src/css/ActionBar.css
@@ -44,7 +44,7 @@
     color: rgb(255, 255, 255);
     margin-top: 3vh;
     margin-bottom: 3vh;
-    font-size: 20px;
+    font-size: 2.5vh;
     clear: both;
 }
 .move
