--- a/src/css/TitleMenu.css
+++ b/src/css/TitleMenu.css
@@ -34,6 +34,7 @@ img
     margin: 3vh auto;
     height: 6vh;
     width: 13vw;
+    font-size: 1.6vh;
     background-color:  rgba(63, 63, 63, 0.1);
     box-shadow: inset 0 0 1em rgba(255, 255, 255, 0.5), 0 0 1em rgba(255, 255, 255, 0.5);
     border: rgb(255, 255, 255) solid 2px;
